--- a/style.css
+++ b/style.css
@@ -982,7 +982,7 @@ body {
     font-size: 10px;
     padding: 4px 8px;
   }
-      .control-buttons {
+     .player-controls .control-buttons {
         grid-template-columns: repeat(3, 1fr) !important;
     }
 }
